--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
                 "ASPNETCORE_URLS": "http://localhost:3000",
                 "FORGE_CLIENT_ID": "fGclun32X4rGfpQalTnndVjxJDdkkdT6",
                 "FORGE_CLIENT_SECRET": "nfQ7QAvJcW5f3cFw",
-                "FORGE_CALLBACK_URL": "http://127.0.0.1:3000/api/forge/oauth2/callback",
+                "FORGE_CALLBACK_URL": "https://forgenetcore.herokuapp.com/api/forge/oauth2/callback",
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
