--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+bin
+obj
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
