--- a/basicforgeviewer.csproj
+++ b/basicforgeviewer.csproj
@@ -5,5 +5,8 @@
   <ItemGroup>
     <PackageReference Include="Autodesk.Forge" Version="1.7.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7"/>
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.14"/>
+    <PackageReference Include="MongoDB.Bson" Version="2.12.3"/>
+    <PackageReference Include="MongoDB.Driver" Version="2.12.3"/>
   </ItemGroup>
 </Project>
