--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,33 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "watch",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/basicforgeviewer.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+
+        {
             "name": ".NET Core Launch - Chrome",
             "type": "coreclr",
             "request": "launch",
@@ -56,5 +83,13 @@
                 "/Views": "${workspaceFolder}/Views"
             }
         },
+
+    ],
+    "compounds": [
+        {
+            "name": "Debug MVC and Chrome",
+            "configurations": [".NET Core Launch (web)", "Attach to Chrome"]
+        }
     ]
+
 }
